# triangle-machine

./: '  .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  HOW_TO_PLAY.md  README.md  ]
assets/3d/: basicmesh.glb
assets/shaders/fragment/: triangle.frag.glsl.spv
assets/shaders/vertex/: indexed_triangle.vert.glsl  indexed_triangle.vert.glsl.spv  triangle.vert.glsl  triangle.vert.glsl.spv
cmd/: drun.sh  format.sh  perf.data  perf.data.old  rconfigure.sh  rrun.sh
house_of_ashes/: entry.cpp
shaders/: input_structures.glsl
shaders/fragment/: cursor.frag  cursor.frag.spv  gooch.frag.glsl  gooch.frag.glsl.spv  grid.frag  grid.frag.glsl.spv  grid.frag.spv  no_lighting.frag  no_lighting.frag.glsl  no_lighting.frag.glsl.spv  no_lighting.frag.spv  pbr.frag  pbr.frag.spv  pbr2.frag  pbr2.frag.spv  pbr3.frag  pbr3.frag.spv  pbr_entity.frag  pbr_entity.frag.spv  pbr_gltf.frag  pbr_gltf.frag.spv  simple_lighting.frag  simple_lighting.frag.glsl  simple_lighting.frag.glsl.spv  simple_lighting.frag.spv  simple_lighting_2.frag.glsl.spv  skybox.frag  skybox.frag.spv  triangle.frag  triangle.frag.glsl  triangle.frag.glsl.spv  triangle.frag.spv
shaders/vertex/: cursor.vert  cursor.vert.spv  grid.vert  grid.vert.glsl  grid.vert.glsl.spv  grid.vert.spv  indexed_draw.vert  indexed_draw.vert.glsl  indexed_draw.vert.glsl.spv  indexed_draw.vert.spv  indexed_triangle.vert.glsl  indexed_triangle.vert.glsl.spv  skybox.vert  skybox.vert.spv  triangle.vert  triangle.vert.spv
src/: entry.cpp  global_utils.h  main.cpp  types.h
src/application/: application.h  entry.cpp  window.cpp  window.h
src/core/: audio.cpp  audio.h  camera.cpp  camera.h  core_options.h  ctpl_stl.h  editor.cpp  editor.h  engine.cpp  engine.h  scene.cpp  scene.h  shader.cpp  shader.h  thread_pool.cpp  thread_pool.h  ui.cpp  ui.h  window.cpp  window.h  wl_window.cpp  wl_window.h
src/core/loaders/: gltf_loader.cpp  gltf_loader.h  loader.cpp
src/editor/: editor.cpp  editor.h
src/graphics/camera/: camera.cpp  camera.h
src/graphics/renderer/: vk_frame.cpp  vk_frame.h  vk_init.cpp  vk_init.h  vk_pipeline.cpp  vk_pipeline.h  vk_renderer.cpp  vk_renderer.h  vk_shader.cpp  vk_shader.h  vk_swapchain.cpp  vk_swapchain.h
src/renderer/: engine.cpp  engine.h  renderer.cpp  renderer.h  types.h
src/resources/: shader_compiler.cpp  shader_compiler.h
src/resources/loaders/: gltf_loader.cpp  gltf_loader.h
src/scene/: scene.cpp  scene.h
src/system/device/: vk_command.cpp  vk_command.h  vk_context.cpp  vk_context.h  vk_debug.cpp  vk_debug.h  vk_device.cpp  vk_device.h  vk_ext.h  vk_options.h  vk_sync.cpp  vk_sync.h  vk_types.h  vk_vma_usage.cpp
src/system/device/memory/: vk_accel_struct.cpp  vk_accel_struct.h  vk_buffer.cpp  vk_buffer.h  vk_descriptor.cpp  vk_descriptor.h  vk_image.cpp  vk_image.h
src/system/host/: io.cpp  io.h
src/system/platform/: window.cpp  window.h
src/vk_backend/: debug.cpp  debug.h  vk_backend.cpp  vk_backend.h  vk_command.cpp  vk_command.h  vk_command_buffer.cpp  vk_debug.cpp  vk_debug.h  vk_device.cpp  vk_device.h  vk_draw_object.cpp  vk_draw_object.h  vk_ext.cpp  vk_ext.h  vk_frame.cpp  vk_frame.h  vk_init.cpp  vk_init.h  vk_options.h  vk_pipeline.cpp  vk_pipeline.h  vk_scene.cpp  vk_scene.h  vk_shader.cpp  vk_shader.h  vk_swapchain.cpp  vk_swapchain.h  vk_sync.cpp  vk_sync.h  vk_types.h  vk_utils.h  vk_vma_usage.cpp  vk_vma_usage.h
src/vk_backend/resources/: glslang_comp.cpp  vk_accel_struct.cpp  vk_accel_struct.h  vk_allocate.cpp  vk_allocate.h  vk_buffer.cpp  vk_buffer.h  vk_descriptor.cpp  vk_descriptor.h  vk_image.cpp  vk_image.h  vk_loader.cpp  vk_loader.h  vk_shader.cpp  vk_shader.h
